v/0.3.0/_sources/examples/03_ensemble_workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/03_ensemble_workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_03_ensemble_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_03_ensemble_workflow.py:


Running Ensemble Inference
==========================

Simple ensemble inference workflow.

This example will demonstrate how to run a simple inference workflow to generate a
ensemble forecast using one of the built in models of Earth-2 Inference
Studio.

In this example you will learn:

- How to instantiate a built in prognostic model
- Creating a data source and IO object
- Select a perturbation method
- Running a simple built in workflow for ensembling
- Post-processing results

.. GENERATED FROM PYTHON SOURCE LINES 38-43

Set Up
------
All workflows inside Earth2Studio require constructed components to be
handed to them. In this example, we will use the built in ensemble workflow
:py:meth:`earth2studio.run.ensemble`.

.. GENERATED FROM PYTHON SOURCE LINES 45-49

.. literalinclude:: ../../earth2studio/run.py
   :language: python
   :start-after: # sphinx - ensemble start
   :end-before: # sphinx - ensemble end

.. GENERATED FROM PYTHON SOURCE LINES 51-57

We need the following:

- Prognostic Model: Use the built in FourCastNet model :py:class:`earth2studio.models.px.FCN`.
- perturbation_method: Use the Spherical Gaussian Method :py:class:`earth2studio.perturbation.SphericalGaussian`.
- Datasource: Pull data from the GFS data api :py:class:`earth2studio.data.GFS`.
- IO Backend: Save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

.. GENERATED FROM PYTHON SOURCE LINES 59-92

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    import numpy as np

    from earth2studio.data import GFS
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import FCN
    from earth2studio.perturbation import SphericalGaussian
    from earth2studio.run import ensemble

    # Load the default model package which downloads the check point from NGC
    package = FCN.load_default_package()
    model = FCN.load_model(package)

    # Instantiate the pertubation method
    sg = SphericalGaussian(noise_amplitude=0.15)

    # Create the data source
    data = GFS()

    # Create the IO handler, store in memory
    chunks = {"ensemble": 1, "time": 1}
    io = ZarrBackend(
        file_name="outputs/03_ensemble_sg.zarr",
        chunks=chunks,
        backend_kwargs={"overwrite": True},
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /localhome/local-ngeneva/miniconda3/envs/e2studio/lib/python3.10/site-packages/modulus/models/module.py:360: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.
      model_dict = torch.load(




.. GENERATED FROM PYTHON SOURCE LINES 93-102

Execute the Workflow
--------------------
With all components initialized, running the workflow is a single line of Python code.
Workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

For the forecast we will predict for 10 steps (for FCN, this is 60 hours) with 8 ensemble
members which will be ran in 2 batches with batch size 4.

.. GENERATED FROM PYTHON SOURCE LINES 104-120

.. code-block:: Python


    nsteps = 10
    nensemble = 8
    batch_size = 2
    io = ensemble(
        ["2024-01-01"],
        nsteps,
        nensemble,
        model,
        data,
        io,
        sg,
        batch_size=batch_size,
        output_coords={"variable": np.array(["t2m", "tcwv"])},
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2024-09-20 15:59:16.720 | INFO     | earth2studio.run:ensemble:294 - Running ensemble inference!
    2024-09-20 15:59:16.721 | INFO     | earth2studio.run:ensemble:302 - Inference device: cuda
    2024-09-20 15:59:16.751 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:178 - Fetching GFS index file: 2024-01-01 00:00:00 lead 0:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2024-09-20 15:59:17.595 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: u10m at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2024-09-20 15:59:17.632 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: v10m at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2024-09-20 15:59:17.651 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: t2m at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2024-09-20 15:59:17.670 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: sp at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2024-09-20 15:59:17.689 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: msl at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Fetching GFS for 2024-01-01 00:00:00:  19%|█▉        | 5/26 [00:00<00:00, 44.35it/s]                                                                                        2024-09-20 15:59:17.708 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: t850 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  19%|█▉        | 5/26 [00:00<00:00, 44.35it/s]                                                                                        2024-09-20 15:59:17.727 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: u1000 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  19%|█▉        | 5/26 [00:00<00:00, 44.35it/s]                                                                                        2024-09-20 15:59:17.746 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: v1000 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  19%|█▉        | 5/26 [00:00<00:00, 44.35it/s]                                                                                        2024-09-20 15:59:17.765 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z1000 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  19%|█▉        | 5/26 [00:00<00:00, 44.35it/s]                                                                                        2024-09-20 15:59:17.784 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: u850 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  19%|█▉        | 5/26 [00:00<00:00, 44.35it/s]                                                                                        2024-09-20 15:59:17.803 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: v850 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  19%|█▉        | 5/26 [00:00<00:00, 44.35it/s]    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:00<00:00, 49.48it/s]                                                                                         2024-09-20 15:59:17.821 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z850 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:00<00:00, 49.48it/s]                                                                                         2024-09-20 15:59:17.840 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: u500 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:00<00:00, 49.48it/s]                                                                                         2024-09-20 15:59:17.858 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: v500 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:00<00:00, 49.48it/s]                                                                                         2024-09-20 15:59:17.876 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z500 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:00<00:00, 49.48it/s]                                                                                         2024-09-20 15:59:17.895 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: t500 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:00<00:00, 49.48it/s]                                                                                         2024-09-20 15:59:17.914 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z50 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:00<00:00, 49.48it/s]    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [00:00<00:00, 51.48it/s]                                                                                         2024-09-20 15:59:17.933 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: r500 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [00:00<00:00, 51.48it/s]                                                                                         2024-09-20 15:59:17.952 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: r850 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [00:00<00:00, 51.48it/s]                                                                                         2024-09-20 15:59:17.971 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: tcwv at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [00:00<00:00, 51.48it/s]                                                                                         2024-09-20 15:59:17.990 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: u100m at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [00:00<00:00, 51.48it/s]                                                                                         2024-09-20 15:59:18.009 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: v100m at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [00:00<00:00, 51.48it/s]                                                                                         2024-09-20 15:59:18.028 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: u250 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [00:00<00:00, 51.48it/s]    Fetching GFS for 2024-01-01 00:00:00:  88%|████████▊ | 23/26 [00:00<00:00, 51.90it/s]                                                                                         2024-09-20 15:59:18.047 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: v250 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  88%|████████▊ | 23/26 [00:00<00:00, 51.90it/s]                                                                                         2024-09-20 15:59:18.065 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z250 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  88%|████████▊ | 23/26 [00:00<00:00, 51.90it/s]                                                                                         2024-09-20 15:59:18.084 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: t250 at 2024-01-01 00:00:00_0
    Fetching GFS for 2024-01-01 00:00:00:  88%|████████▊ | 23/26 [00:00<00:00, 51.90it/s]    Fetching GFS for 2024-01-01 00:00:00: 100%|██████████| 26/26 [00:00<00:00, 51.33it/s]
    2024-09-20 15:59:18.165 | SUCCESS  | earth2studio.run:ensemble:315 - Fetched data from GFS
    2024-09-20 15:59:18.174 | INFO     | earth2studio.run:ensemble:337 - Starting 8 Member Ensemble Inference with             4 number of batches.
    Total Ensemble Batches:   0%|          | 0/4 [00:00<?, ?it/s]
    Running batch 0 inference:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:   9%|▉         | 1/11 [00:00<00:02,  3.72it/s]
    Running batch 0 inference:  18%|█▊        | 2/11 [00:00<00:03,  2.65it/s]
    Running batch 0 inference:  27%|██▋       | 3/11 [00:01<00:03,  2.38it/s]
    Running batch 0 inference:  36%|███▋      | 4/11 [00:01<00:03,  2.24it/s]
    Running batch 0 inference:  45%|████▌     | 5/11 [00:02<00:02,  2.12it/s]
    Running batch 0 inference:  55%|█████▍    | 6/11 [00:02<00:02,  2.02it/s]
    Running batch 0 inference:  64%|██████▎   | 7/11 [00:03<00:02,  1.93it/s]
    Running batch 0 inference:  73%|███████▎  | 8/11 [00:03<00:01,  1.86it/s]
    Running batch 0 inference:  82%|████████▏ | 9/11 [00:04<00:01,  1.80it/s]
    Running batch 0 inference:  91%|█████████ | 10/11 [00:05<00:00,  1.74it/s]
    Running batch 0 inference: 100%|██████████| 11/11 [00:05<00:00,  1.66it/s]
                                                                                  Total Ensemble Batches:  25%|██▌       | 1/4 [00:09<00:27,  9.15s/it]
    Running batch 2 inference:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 2 inference:   9%|▉         | 1/11 [00:00<00:01,  6.98it/s]
    Running batch 2 inference:  18%|█▊        | 2/11 [00:00<00:02,  3.08it/s]
    Running batch 2 inference:  27%|██▋       | 3/11 [00:01<00:03,  2.55it/s]
    Running batch 2 inference:  36%|███▋      | 4/11 [00:01<00:03,  2.32it/s]
    Running batch 2 inference:  45%|████▌     | 5/11 [00:02<00:02,  2.15it/s]
    Running batch 2 inference:  55%|█████▍    | 6/11 [00:02<00:02,  2.04it/s]
    Running batch 2 inference:  64%|██████▎   | 7/11 [00:03<00:02,  1.96it/s]
    Running batch 2 inference:  73%|███████▎  | 8/11 [00:03<00:01,  1.88it/s]
    Running batch 2 inference:  82%|████████▏ | 9/11 [00:04<00:01,  1.81it/s]
    Running batch 2 inference:  91%|█████████ | 10/11 [00:04<00:00,  1.75it/s]
    Running batch 2 inference: 100%|██████████| 11/11 [00:05<00:00,  1.67it/s]
                                                                                  Total Ensemble Batches:  50%|█████     | 2/4 [00:18<00:18,  9.01s/it]
    Running batch 4 inference:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 4 inference:   9%|▉         | 1/11 [00:00<00:01,  6.99it/s]
    Running batch 4 inference:  18%|█▊        | 2/11 [00:00<00:02,  3.05it/s]
    Running batch 4 inference:  27%|██▋       | 3/11 [00:01<00:03,  2.55it/s]
    Running batch 4 inference:  36%|███▋      | 4/11 [00:01<00:03,  2.31it/s]
    Running batch 4 inference:  45%|████▌     | 5/11 [00:02<00:02,  2.15it/s]
    Running batch 4 inference:  55%|█████▍    | 6/11 [00:02<00:02,  2.04it/s]
    Running batch 4 inference:  64%|██████▎   | 7/11 [00:03<00:02,  1.95it/s]
    Running batch 4 inference:  73%|███████▎  | 8/11 [00:03<00:01,  1.88it/s]
    Running batch 4 inference:  82%|████████▏ | 9/11 [00:04<00:01,  1.81it/s]
    Running batch 4 inference:  91%|█████████ | 10/11 [00:04<00:00,  1.74it/s]
    Running batch 4 inference: 100%|██████████| 11/11 [00:05<00:00,  1.66it/s]
                                                                                  Total Ensemble Batches:  75%|███████▌  | 3/4 [00:26<00:08,  8.97s/it]
    Running batch 6 inference:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 6 inference:   9%|▉         | 1/11 [00:00<00:01,  7.01it/s]
    Running batch 6 inference:  18%|█▊        | 2/11 [00:00<00:02,  3.11it/s]
    Running batch 6 inference:  27%|██▋       | 3/11 [00:01<00:03,  2.57it/s]
    Running batch 6 inference:  36%|███▋      | 4/11 [00:01<00:03,  2.29it/s]
    Running batch 6 inference:  45%|████▌     | 5/11 [00:02<00:02,  2.14it/s]
    Running batch 6 inference:  55%|█████▍    | 6/11 [00:02<00:02,  2.04it/s]
    Running batch 6 inference:  64%|██████▎   | 7/11 [00:03<00:02,  1.94it/s]
    Running batch 6 inference:  73%|███████▎  | 8/11 [00:03<00:01,  1.87it/s]
    Running batch 6 inference:  82%|████████▏ | 9/11 [00:04<00:01,  1.81it/s]
    Running batch 6 inference:  91%|█████████ | 10/11 [00:04<00:00,  1.74it/s]
    Running batch 6 inference: 100%|██████████| 11/11 [00:05<00:00,  1.66it/s]
                                                                                  Total Ensemble Batches: 100%|██████████| 4/4 [00:35<00:00,  8.95s/it]    Total Ensemble Batches: 100%|██████████| 4/4 [00:35<00:00,  8.98s/it]
    2024-09-20 15:59:54.081 | SUCCESS  | earth2studio.run:ensemble:382 - Inference complete




.. GENERATED FROM PYTHON SOURCE LINES 121-127

Post Processing
---------------
The last step is to post process our results. Cartopy is a great library for plotting
fields on projections of a sphere.

Notice that the Zarr IO function has additional APIs to interact with the stored data.

.. GENERATED FROM PYTHON SOURCE LINES 129-185

.. code-block:: Python

    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    forecast = "2024-01-01"


    def plot_(axi, data, title, cmap):
        """Convenience function for plotting pcolormesh."""
        # Plot the field using pcolormesh
        im = axi.pcolormesh(
            io["lon"][:],
            io["lat"][:],
            data,
            transform=ccrs.PlateCarree(),
            cmap=cmap,
        )
        plt.colorbar(im, ax=axi, shrink=0.6, pad=0.04)
        # Set title
        axi.set_title(title)
        # Add coastlines and gridlines
        axi.coastlines()
        axi.gridlines()


    for variable, cmap in zip(["tcwv"], ["Blues"]):
        step = 4  # lead time = 24 hrs

        plt.close("all")
        # Create a Robinson projection
        projection = ccrs.Robinson()

        # Create a figure and axes with the specified projection
        fig, (ax1, ax2, ax3) = plt.subplots(
            nrows=1, ncols=3, subplot_kw={"projection": projection}, figsize=(16, 3)
        )

        plot_(
            ax1,
            io[variable][0, 0, step],
            f"{forecast} - Lead time: {6*step}hrs - Member: {0}",
            cmap,
        )
        plot_(
            ax2,
            io[variable][1, 0, step],
            f"{forecast} - Lead time: {6*step}hrs - Member: {1}",
            cmap,
        )
        plot_(
            ax3,
            np.std(io[variable][:, 0, step], axis=0),
            f"{forecast} - Lead time: {6*step}hrs - Std",
            cmap,
        )

        plt.savefig(f"outputs/03_{forecast}_{variable}_{step}_ensemble.jpg")



.. image-sg:: /examples/images/sphx_glr_03_ensemble_workflow_001.png
   :alt: 2024-01-01 - Lead time: 24hrs - Member: 0, 2024-01-01 - Lead time: 24hrs - Member: 1, 2024-01-01 - Lead time: 24hrs - Std
   :srcset: /examples/images/sphx_glr_03_ensemble_workflow_001.png, /examples/images/sphx_glr_03_ensemble_workflow_001_2_00x.png 2.00x
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (1 minutes 40.978 seconds)

**Estimated memory usage:**  3782 MB


.. _sphx_glr_download_examples_03_ensemble_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 03_ensemble_workflow.ipynb <03_ensemble_workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 03_ensemble_workflow.py <03_ensemble_workflow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 03_ensemble_workflow.zip <03_ensemble_workflow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
